# kaggle-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  environment.yml  image_processing.py  pyproject.toml  requirements.txt  setup.py  statistical_diagnostic.py
classification/: build_tree.py  visualize_tree.js
docs/: Makefile  conf.py  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
kaggle_tools/: __init__.py  conf.py
kaggle_tools/classification/: tree_structure.json  visualize_tree.js  visualize_tree.py
kaggle_tools/deep-learning/: model_management.py
kaggle_tools/diagnostic/: perfromance.py
kaggle_tools/features_engineering/: dates_engineering.py  timestamps.py
kaggle_tools/gradient_boosting/: linear_regression.py  regression.py
kaggle_tools/image_processing/: image_augmentation.py
kaggle_tools/metrics/: keras.py
kaggle_tools/scale/: __init__.py  dask.py
kaggle_tools/submission/: submission.py
kaggle_tools/test/: test_keras_metrics.py
kaggle_tools/tests/: test_keras_metrics.py
